Import tuplets